Fixed index page

--- a/FitnessCentreSite/Views/Home/Index.cshtml
+++ b/FitnessCentreSite/Views/Home/Index.cshtml
@@ -2,10 +2,10 @@
     <div class="container">
 
         <ul class="bxslider">
-            <li><img src="reklama/5.png" /></li>
-            <li><img src="reklama/2.png" /></li>
-            <li><img src="reklama/3.png" /></li>
-            <li><img src="reklama/4.png" /></li>
+            <li><img src="@Url.Content("~/Content/Images/banners/5.png")" /></li>
+            <li><img src="@Url.Content("~/Content/Images/banners/2.png")" /></li>
+            <li><img src="@Url.Content("~/Content/Images/banners/3.png")" /></li>
+            <li><img src="@Url.Content("~/Content/Images/banners/4.png")" /></li>
         </ul>
     </div>
 </center>
@@ -32,17 +32,17 @@
 
 <center>
     <div class="inst">
-        <img src="inst.png" alt="instagram" width="120" height="45">
+        <img src="@Url.Content("~/Content/Images/inst.png")" alt="instagram" width="120" height="45">
         <h3 style="margin-right: -600px;margin-top: -40px;">#ARNOLD</h3>
     </div>
 </center>
 <center>
     <div class="photos">
-        <div class="fotoDiv"><img src="inst/1.jpg" /></div>
-        <div class="fotoDiv"><img src="inst/2.jpg" /></div>
-        <div class="fotoDiv"><img src="inst/3.jpg" /></div>
-        <div class="fotoDiv"><img src="inst/4.jpg" /></div>
-        <div class="fotoDiv"><img src="inst/5.jpg" /></div>
+        <div class="fotoDiv"><img src="@Url.Content("~/Content/Images/inst/1.jpg")" /></div>
+        <div class="fotoDiv"><img src="@Url.Content("~/Content/Images/inst/2.jpg")" /></div>
+        <div class="fotoDiv"><img src="@Url.Content("~/Content/Images/inst/3.jpg")" /></div>
+        <div class="fotoDiv"><img src="@Url.Content("~/Content/Images/inst/4.jpg")" /></div>
+        <div class="fotoDiv"><img src="@Url.Content("~/Content/Images/inst/5.jpg")" /></div>
     </div>
 </center>
 <center><div class="down"></div></center>
