--- a/FitnessCentreSite/Content/Style.css
+++ b/FitnessCentreSite/Content/Style.css
@@ -72,7 +72,7 @@ margin:0 auto;
 border-bottom-right-radius: 10px;
 width: 1000px;
 height: 25px;
-background-image: url("header.jpg");
+background-image: url("Images/header.jpg");
 background-repeat: repeat-x;
 padding:15px 20px 10px 0px;
 margin:0 auto;
@@ -92,7 +92,7 @@ z-index:101;
 
 .navigate ul 
 {
-  list-style-tipe:none;
+  list-style-type:none;
   padding:0;
   margin:0 auto;
   width: 800px; 
@@ -127,7 +127,7 @@ z-index:101;
 .main{
 margin:0 auto;
 width: 1400px;
-background-image:url('fon.jpg');
+background-image:url("Images/fon.jpg");
 height: 100%;
 background-repeat: no-repeat;
 padding: 1px;
@@ -137,7 +137,7 @@ padding: 1px;
 /*Логотип*/
 
 .logo{
-background-image:url(logo.png);
+background-image:url("Images/logo.png");
 background-position: 400px 250px;
 }
 
@@ -156,7 +156,7 @@ margin-left: -85px;
 width: 890px;
 height: 500px;
 margin:0 auto;
-border-radius: 5px
+border-radius: 5px;
 background:  #0F0F0F;
 border:  1px solid #fff; 
 }
@@ -194,7 +194,7 @@ color: #fff;
 	-webkit-transform: skew(-20deg);
 	   -moz-transform: skew(-20deg);
 	     -o-transform: skew(-20deg);
-	background-image:url('mot/2.jpg');
+	background-image:url("Images/mot/2.jpg");
 }
 
 #parallelogram2 {
@@ -206,7 +206,7 @@ color: #fff;
 	-webkit-transform: skew(-20deg);
 	   -moz-transform: skew(-20deg);
 	     -o-transform: skew(-20deg);
-	background-image:url('mot/1.jpg');
+	background-image:url("Images/mot/1.jpg");
 }
 
 #parallelogram3 {
@@ -218,7 +218,7 @@ color: #fff;
 	-webkit-transform: skew(-20deg);
 	   -moz-transform: skew(-20deg);
 	     -o-transform: skew(-20deg);
-	background-image:url('mot/3.jpg');
+	background-image:url("Images/mot/3.jpg");
 }
 
 /*автор*/
@@ -230,13 +230,13 @@ color: gold;
 /*инстаграм*/
 
 .inst {
-background-image:url('fon.jpg');
+background-image:url("Images/fon.jpg");
 background-repeat: no-repeat;
 width: 850px;
 height: 50px;
 margin:0 auto;
 margin-top:60px;
-border-radius: 15px
+border-radius: 15px;
 border:  1px solid #0F0F0F;
 box-shadow: 0 0 1em #00D3EB;
 font-family:Coronetscript, cursive ;
@@ -270,7 +270,7 @@ margin-left:200px;
 
 .down {
 position: absolute;
-background-image: url("dno.jpg");  
+background-image: url("Images/dno.jpg");  
 width: 100%;
 height: 200px;
 top: 1480px;
@@ -310,7 +310,7 @@ background:  #fff;
 .vidraspisan {
 width: 550px;
 height: 35px;
-padding: 0 auto;
+padding: 0;
 margin:0 auto;
 margin-top: 10px;
 font-family:Coronetscript, cursive ;
@@ -351,7 +351,7 @@ font-size: 19pt;
 color: #000;
 border:  1px solid #E6E6FA;
 box-shadow:  0 0 1em red;
-border-radius: 6px
+border-radius: 6px;
 background:  #E6E6FA;   
 }
 
@@ -366,7 +366,7 @@ margin-top: 20px;
 margin-right: 270px;
 border:  1px solid #E6E6FA;
 box-shadow:  0 0 1em red;
-border-radius: 30px
+border-radius: 30px;
 background:  #E6E6FA;  
 }
 
@@ -492,17 +492,17 @@ float: none;
 position: absolute;
 width: 50px;
 height: 50px;
-background-image: url("icon.png");
+background-image: url("Images/icon.png");
 display: inline-block;
 margin-top: -15px;
 margin-left: 500px;
 z-index: 9000;
 }
 #abonem a:hover{
-background-image: url("icon1.png");
+background-image: url("Images/icon1.png");
 }
 #abonem a:active{
-background-image: url("icon.png");
+background-image: url("Images/icon.png");
 }
 
 /* Форма */
