--- a/FitnessCentreSite/Content/jquery.bxslider.css
+++ b/FitnessCentreSite/Content/jquery.bxslider.css
@@ -42,7 +42,7 @@
 
 .bx-wrapper .bx-loading {
 	min-height: 50px;
-	background: url(images/bx_loader.gif) center center no-repeat #fff;
+	background: url("Images/slider/bx_loader.gif") center center no-repeat #fff;
 	height: 100%;
 	width: 100%;
 	position: absolute;
@@ -91,12 +91,12 @@
 
 .bx-wrapper .bx-prev {
 	left: 25px;
-	background: url(images/controls.png) no-repeat 0 -32px;
+	background: url("Images/slider/controls.png") no-repeat 0 -32px;
 }
 
 .bx-wrapper .bx-next {
 	right: -55px;
-	background: url(images/controls.png) no-repeat -43px -32px;
+	background: url("Images/slider/controls.png") no-repeat -43px -32px;
 }
 
 .bx-wrapper .bx-prev:hover {
@@ -134,7 +134,7 @@
 	width: 10px;
 	height: 11px;
 	outline: 0;
-	background: url(images/controls.png) -806px -11px no-repeat;
+	background: url("Images/slider/controls.png") -806px -11px no-repeat;
 	margin: 0 3px;
 	
 }
@@ -150,7 +150,7 @@
 	width: 9px;
 	height: 11px;
 	outline: 0;
-	background: url(images/controls.png) -86px -44px no-repeat;
+	background: url("Images/slider/controls.png") -86px -44px no-repeat;
 	margin: 0 3px;
 }
 
