--- a/FitnessCentreSite/Views/Home/Index.cshtml
+++ b/FitnessCentreSite/Views/Home/Index.cshtml
@@ -1,4 +1,9 @@
-﻿<center>
+﻿@{
+    ViewBag.Title = "Фитнес-центр ARNOLD";
+    Layout = "~/Views/Shared/_LayoutPage1.cshtml";
+}
+
+<center>
     <div class="container">
 
         <ul class="bxslider">
