--- a/FitnessCentreSite/Views/Shared/_LayoutPage1.cshtml
+++ b/FitnessCentreSite/Views/Shared/_LayoutPage1.cshtml
@@ -32,12 +32,12 @@ $(document).ready(function(){
         <div id="top-bar" style="border: 1px solid;">
             <nav class="navigate">
                 <ul>
-                    <li><a href="index.html">Главная</a></li>
-                    <li><a href="uslugi.html">Услуги</a></li>
-                    <li><a href="rasp.html">Расписание</a></li>
-                    <li><a href="personal.html">Персонал</a></li>
-                    <li><a href="magazin.html">Магазин</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="~/Home/">Главная</a></li>
+                    <li><a href="~/Services/">Услуги</a></li>
+                    <li><a href="~/Shedule/Shedule.cshtml">Расписание</a></li>
+                    <li><a href="~/Empl/Empl.cshtml">Персонал</a></li>
+                    <li><a href="~/Shop/Shop.cshtml">Магазин</a></li>
+                    <li><a href="~/FAQ/faq.cshtml">FAQ</a></li>
                 </ul>
             </nav>
             <div id="abonem">
