added shedule page with issues

--- a/FitnessCentreSite/Views/Shared/_LayoutPage1.cshtml
+++ b/FitnessCentreSite/Views/Shared/_LayoutPage1.cshtml
@@ -34,7 +34,7 @@ $(document).ready(function(){
                 <ul>
                     <li><a href="~/Home/">Главная</a></li>
                     <li><a href="~/Services/">Услуги</a></li>
-                    <li><a href="~/Shedule/Shedule.cshtml">Расписание</a></li>
+                    <li><a href="~/Shedule/">Расписание</a></li>
                     <li><a href="~/Empl/Empl.cshtml">Персонал</a></li>
                     <li><a href="~/Shop/Shop.cshtml">Магазин</a></li>
                     <li><a href="~/FAQ/faq.cshtml">FAQ</a></li>
