--- a/FitnessCentreSite/Views/Home/Index.cshtml
+++ b/FitnessCentreSite/Views/Home/Index.cshtml
@@ -7,49 +7,33 @@
     <div class="container">
 
         <ul class="bxslider">
-            <li><img src="@Url.Content("~/Content/Images/banners/5.png")" /></li>
-            <li><img src="@Url.Content("~/Content/Images/banners/2.png")" /></li>
-            <li><img src="@Url.Content("~/Content/Images/banners/3.png")" /></li>
-            <li><img src="@Url.Content("~/Content/Images/banners/4.png")" /></li>
+            <li><img src="@Url.Content("~/Content/Images/advert/5.png")" /></li>
+            <li><img src="@Url.Content("~/Content/Images/advert/2.png")" /></li>
+            <li><img src="@Url.Content("~/Content/Images/advert/3.png")"/></li>
+            <li><img src="@Url.Content("~/Content/Images/advert/a.png")" /></li>
         </ul>
     </div>
 </center>
-<center>
-    <div class="motivzap">
-        <div id="parallelogram"></div>
-        <div id="parallelogram2"></div>
-        <div id="parallelogram3"></div>
-        <div class="motivzap2">
-            <style>
-                p:first-letter {
-                    color: #FF0000;
-                    margin-left: 5px;
-                    font: normal 35pt italic;
-                }
-            </style>
-            <p class="motivzap3">Для меня жизнь - это постоянное чувство голода. Смысл жизни не в том, чтобы просто существовать, выживать, но в том, чтобы двигаться вперед, совершенствоваться, достигать, завоевывать.</p>
-            <div class="av"><br>&#169;Arnold Schwarzenegger</br></div>
 
+<center><img src="fot.png" alt="fitness" margin-top:20px;></center>
+<div class="fit">
+    <div class="fit2">
+        <div class="fit3">
+            <p>Для меня жизнь - это постоянное чувство голода. Смысл жизни не в том, чтобы просто существовать, выживать, но в том, чтобы двигаться вперед, совершенствоваться, достигать, завоевывать.</p>
+            <div class="av"><br>&#169;Arnold Schwarzenegger<br/></div>
+            <div class="fit4">
+                <p>Мы уверены, что предоставляемые нашими спортивными центрами фитнес-услуги не разочаруют вас и принесут именно тот эффект, которого вы ждете!</p>
+            </div>
+        </div>
+        <div>
+            <div id="parallelogram"><img src="@Url.Content("~/Content/Images/mot/1.png")"></div>
+            <div id="parallelogram2"><img src="@Url.Content("~/Content/Images/mot/2.png")"></div>
+            <div id="parallelogram3"><img src="@Url.Content("~/Content/Images/mot/3.png")" /></div>
         </div>
     </div>
-</center>
+</div>
 
 
-<center>
-    <div class="inst">
-        <img src="@Url.Content("~/Content/Images/inst.png")" alt="instagram" width="120" height="45">
-        <h3 style="margin-right: -600px;margin-top: -40px;">#ARNOLD</h3>
-    </div>
-</center>
-<center>
-    <div class="photos">
-        <div class="fotoDiv"><img src="@Url.Content("~/Content/Images/inst/1.jpg")" /></div>
-        <div class="fotoDiv"><img src="@Url.Content("~/Content/Images/inst/2.jpg")" /></div>
-        <div class="fotoDiv"><img src="@Url.Content("~/Content/Images/inst/3.jpg")" /></div>
-        <div class="fotoDiv"><img src="@Url.Content("~/Content/Images/inst/4.jpg")" /></div>
-        <div class="fotoDiv"><img src="@Url.Content("~/Content/Images/inst/5.jpg")" /></div>
-    </div>
-</center>
 <center><div class="down"></div></center>
 
 
@@ -71,21 +55,19 @@
 <div id="window">
 
     <!-- Картинка крестика-->
-    <img class="close" onclick="show('none')" src="http://sergey-oganesyan.ru/wp-content/uploads/2014/01/close.png">
+    <img class="close" onclick="show('none')" src="close.png">
 
     <div class="blokabon">
-        <img style="margin: -10px 0 0 50px;" src="fithart.jpg">
-        <center><h2>Абонемент</h2></center>
+        <center><h2>Получить абонемент</h2></center>
         <fieldset>
             <form action="" method=post>
                 <h5>
                     Имя&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" required><span></span>
-                    <h5>
-                        Фамилия&nbsp;<input type=text required><span></span>
-                        <h5>Эл. почта&nbsp;<input type=email required><span></span>
+                </h5>
+                <h5>Телефон&nbsp;&nbsp;<input type=number required><span></span></h5>
             </form>
         </fieldset>
         <br>
-        <center><button>Получить</button></center>
+        <center><button><img src="button.png"></button></center>
     </div>
 </div>
