--- a/FitnessCentreSite/Views/Shared/_LayoutPage1.cshtml
+++ b/FitnessCentreSite/Views/Shared/_LayoutPage1.cshtml
@@ -1,12 +1,18 @@
 ﻿<!DOCTYPE html>
-
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
-    <link href="@Url.Content("~/Content/Style.css")" rel="stylesheet" type="text/css" />
+    <script src="https://vk.com/js/api/openapi.js?145" type="text/javascript"></script>
+    <title>Главная</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <!-- jQuery library (served from Google) -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script src="@Url.Content("~/Scripts/jquery.bxslider.min.js")"></script>
+
+
+
+    <!-- bxSlider Javascript file -->
+    <script src="js/jquery.bxslider.js"></script>
     <script type="text/javascript">
 $(document).ready(function(){
   $('.bxslider').bxSlider({
@@ -15,38 +21,55 @@ $(document).ready(function(){
 });
     </script>
     <!-- bxSlider CSS file -->
-    <link href="@Url.Content("~/Content/jquery.bxslider.css")" rel="stylesheet" />
+    <link href="jquery.bxslider.css" rel="stylesheet" />
 
 </head>
 <body>
-    <div id="header">
+    <div id="header2">
         <div id="header1">
-            <img src="@Url.Content("~/Content/Images/logo.png")" alt="logo" width="106" height="89">
-            <div style="float:right;">
-                <h4 style="margin-right: 430px;margin-top: 0px;">фитнес-центр</h4>
-                <h1 style="margin-right: 430px;margin-top: -25px;">ARNOLD</h1>
-                <h6 style="margin-right: 400px;margin-top: -23px;">Arnold Schwarzenegger Corporation</h6>
-                <h6 style="margin-left: 530px;margin-top: -50px;">тел: 8-800-555-35-35</h6>
-            </div>
+            <img src="logo3.png" alt="logo" width="176" height="89" margin-top:10px>
         </div>
-        <div id="top-bar" style="border: 1px solid;">
+        <div id="top-bar">
             <nav class="navigate">
                 <ul>
-                    <li><a href="~/Home/">Главная</a></li>
-                    <li><a href="~/Services/">Услуги</a></li>
-                    <li><a href="~/Shedule/">Расписание</a></li>
-                    <li><a href="~/Empl/Empl.cshtml">Персонал</a></li>
-                    <li><a href="~/Shop/Shop.cshtml">Магазин</a></li>
-                    <li><a href="~/FAQ/faq.cshtml">FAQ</a></li>
+                    <li><a link href="index.html"><b>Главная</b></a></li>
+                    <li><a href="uslugi.html"><b>Услуги</b></a></li>
+                    <li><a href="rasp/rasp.html"><b>Расписание</b></a></li>
+                    <li><a href="personal.html"><b>Персонал</b></a></li>
+                    <li><a href="magazin.html"><b>Магазин</b></a></li>
+                    <li><a href="faq.html"><b>FAQ</b></a></li>
                 </ul>
             </nav>
+            <div class="in">
+                <center><a href="registr/index.html"><b>Войти</b></a></center>
+
+
+            </div>
+            <div class="adres">
+
+
+                <center><h4 style="padding-top: 20px; margin-top:0px;">г.Саратов</h4></center>
+                <center><h6 style="margin-top: -20px;">ул.Арнольда&nbsp;№&nbsp;007</h6></center>
+                <center><h6 style="margin-top: -25px;">тел:88005553535</h6></center>
+
+            </div>
+
+
+            <div id="header">
+            </div>
             <div id="abonem">
                 <a class="myButton" onclick="show('block')"></a>
             </div>
         </div>
-    </div>
-    <div class="main">
-        @RenderBody()
-    </div>
+     </div>
+                    @RenderBody()
+
+            
+
+
+
+
+
+
 </body>
 </html>
