--- a/FitnessCentreSite/Content/Style.css
+++ b/FitnessCentreSite/Content/Style.css
@@ -144,7 +144,7 @@ margin-left:-53%;
 #abonem a{
 width:250px;
 height:40px;
-background-image: url("cart.png");
+background-image: url("Images/cart.png");
 background-repeat: no-repeat;
 margin-left: 30%;
 margin-top: 10%;
@@ -152,10 +152,10 @@ display: inline-block;
 z-index: 100;
 }
 #abonem a:hover{
-background-image: url("cart2.png");
+background-image: url("Images/cart2.png");
 }
 #abonem a:active{
-background-image: url("cart2.png");
+background-image: url("Images/cart2.png");
 }
 
 
