--- a/FitnessCentreSite/Views/Services/Services.cshtml
+++ b/FitnessCentreSite/Views/Services/Services.cshtml
@@ -7,21 +7,21 @@
 <div class="main">
     <center>
         <div class="nazv">
-            <img src="uslug/12.png" style="margin-left: -600px;">
+            <img src="@Url.Content("`/Content/Images/uslug/uslug/12.png")" style="margin-left: -600px;">
             <h1 style="margin-top: -50px;">УСЛУГИ</h1>
         </div>
     </center>
     <div class="fit">
 
-        <div class="fotoDiv"><a href="uslugi1.html"><img src="uslug/bas.png" /></a></div>
-        <div class="fotoDiv"><a href="uslugi1.html"><img src="uslug/BOJ.png" /></a></div>
-        <div class="fotoDiv"><a href="uslugi1.html"><img src="uslug/GRUP.png" /></a></div>
-        <div class="fotoDiv"><a href="uslugi1.html"><img src="uslug/IGR.png" /></a></div>
-        <div class="fotoDiv"><a href="uslugi1.html"><img src="uslug/MULT.png" /></a></div>
-        <div class="fotoDiv"><a href="uslugi1.html"><img src="uslug/SAUN.png" /></a></div>
-        <div class="fotoDiv"><a href="uslugi1.html"><img src="uslug/TEN.png" /></a></div>
-        <div class="fotoDiv"><a href="uslugi1.html"><img src="uslug/TREN.png" /></a></div>
-        <div class="fotoDiv"><a href="uslugi1.html"><img src="uslug/PERS.png" /></a></div>
+        <div class="fotoDiv"><a href="uslugi1.html"><img src="@Url.Content("`/Content/Images/uslug/bas.png")" /></a></div>
+        <div class="fotoDiv"><a href="uslugi1.html"><img src="@Url.Content("`/Content/Images/uslug/uslug/BOJ.png")" /></a></div>
+        <div class="fotoDiv"><a href="uslugi1.html"><img src="@Url.Content("`/Content/Images/uslug/uslug/GRUP.png")" /></a></div>
+        <div class="fotoDiv"><a href="uslugi1.html"><img src="@Url.Content("`/Content/Images/uslug/uslug/IGR.png")" /></a></div>
+        <div class="fotoDiv"><a href="uslugi1.html"><img src="@Url.Content("`/Content/Images/uslug/uslug/MULT.png")" /></a></div>
+        <div class="fotoDiv"><a href="uslugi1.html"><img src="@Url.Content("`/Content/Images/uslug/uslug/SAUN.png")" /></a></div>
+        <div class="fotoDiv"><a href="uslugi1.html"><img src="@Url.Content("`/Content/Images/uslug/uslug/TEN.png")" /></a></div>
+        <div class="fotoDiv"><a href="uslugi1.html"><img src="@Url.Content("`/Content/Images/uslug/uslug/TREN.png")" /></a></div>
+        <div class="fotoDiv"><a href="uslugi1.html"><img src="@Url.Content("`/Content/Images/uslug/uslug/PERS.png")" /></a></div>
 
 
 
@@ -30,7 +30,7 @@
 
     <center>
         <div class="med">
-            <img src="uslug/med.png" style="margin-left: -5%; margin-top: 50px;">
+            <img src="@Url.Content("`/Content/Images/uslug/uslug/med.png")" style="margin-left: -5%; margin-top: 50px;">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.1006729580076!2d45.9755743158689!3d51.52971331689231!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4114c7000890260d%3A0xb69430fed1b7968c!2z0KHQsNGA0LDRgtC-0LLRgdC60LjQuSDQk9C-0YHRg9C00LDRgNGB0YLQstC10L3QvdGL0Lkg0KLQtdGF0L3QuNGH0LXRgdC60LjQuSDQo9C90LjQstC10YDRgdC40YLQtdGCINC40LzQtdC90Lgg0JPQsNCz0LDRgNC40L3QsCDQri4g0JAu!5e0!3m2!1sru!2sru!4v1494839905773" width="800" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
     </center>
