--- a/FitnessCentreSite/Views/Store/Store.cshtml
+++ b/FitnessCentreSite/Views/Store/Store.cshtml
@@ -3,6 +3,82 @@
     ViewBag.Title = "Store";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="fit">
+    <div class="sidebar">
+        <h2>Каталог товаров:</h2>
+        <nav>
+            <ul class="aside-menu">
+                <li class="active">Обувь</li>
+                <li><a href="magazin.html">Одежда</a></li>
+                <li><a href="magazin.html">Товары для фитнеса</a></li>
+                <li><a href="magazin.html">Товары для единоборств</a></li>
+                <li><a href="magazin.html">Спортивное питание</a></li>
+                <li><a href="magazin.html">Аксессуары</a></li>
+            </ul>
+        </nav>
 
-<h2>Store</h2>
+    </div>
+    <div class="content">
+        <h2>Обувь</h2>
 
+        <div class="tovar">
+            <img src="Magazin/Obyv/1.jpg" class="kartinka" width="146" height="146">
+            <div class="name">ASICS <div class="name1">Кроссовки GT-2000 4</div></div> <div>8 500 руб.</div>
+        </div>
+        <div class="tovar">
+            <img src="Magazin/Obyv/2.jpg" class="kartinka" width="146" height="146">
+            <div class="name"> Nike <div class="name1">Кроссовки NIKE AIR MAX </div></div> <div>5 500 руб.</div>
+        </div>
+
+        <div class="tovar">
+            <img src="Magazin/Obyv/3.jpg" class="kartinka" width="146" height="146">
+            <div class="name">ASICS TIGER <div class="name1">Кроссовки AARON</div></div> <div>4 700 руб.</div>
+        </div>
+        <div class="tovar">
+            <img src="Magazin/Obyv/4.jpg" class="kartinka" width="146" height="146">
+            <div class="name">Patrol <div class="name1">Кроссовки</div></div> <div>3 000 руб.</div>
+        </div>
+        <div class="tovar">
+            <img src="Magazin/Obyv/5.jpg" class="kartinka" width="146" height="146">
+            <div class="name">ONITSUKA TIGER <div class="name1">Кроссовки MEXICO 66</div></div> <div>5 900 руб.</div>
+        </div>
+        <div class="tovar">
+            <img src="Magazin/Obyv/6.jpg" class="kartinka" width="146" height="146">
+            <div class="name">UN1TA <div class="name1">Кроссовки</div></div> <div>4 530 руб.</div>
+        </div>
+
+        <div class="tovar">
+            <img src="Magazin/Obyv/7.jpg" class="kartinka" width="146" height="146">
+            <div class="name">Joma <div class="name1">Бутсы AGUILA</div></div> <div>2 550 руб.</div>
+        </div>
+        <div class="tovar">
+            <img src="Magazin/Obyv/8.jpg" class="kartinka" width="146" height="146">
+            <div class="name">Nike <div class="name1">Кроссовки NIKE AIR MAX </div></div> <div>4 900 руб.</div>
+        </div>
+        <div class="tovar">
+            <img src="Magazin/Obyv/9.jpg" class="kartinka" width="146" height="146">
+            <div class="name">EDITEX <div class="name1">Кеды</div></div> <div>2 700 руб.</div>
+        </div>
+        <div class="tovar">
+            <img src="Magazin/Obyv/10.jpg" class="kartinka" width="146" height="146">
+            <div class="name">Nike <div class="name1">Кроссовки THE AIR </div></div> <div>5 500 руб.</div>
+        </div>
+        <div class="tovar">
+            <img src="Magazin/Obyv/11.jpg" class="kartinka" width="146" height="146">
+            <div class="name">Fred Perry <div class="name1">Кеды </div></div> <div>6 500 руб.</div>
+        </div>
+        <div class="tovar">
+            <img src="Magazin/Obyv/12.jpg" class="kartinka" width="146" height="146">
+            <div class="name">DC Shoes<div class="name1">Кеды </div></div> <div>4 500 руб.</div>
+        </div>
+        <div class="tovar">
+            <img src="Magazin/Obyv/13.jpg" class="kartinka" width="146" height="146">
+            <div class="name">Nike <div class="name1">Галоши </div></div> <div>1 500 руб.</div>
+        </div>
+        <div class="tovar">
+            <img src="Magazin/Obyv/14.jpg" class="kartinka" width="146" height="146">
+            <div class="name">Reebok <div class="name1">Сланцы </div></div> <div>500 руб.</div>
+        </div>
+    </div>
+
+</div>
