--- a/FitnessCentreSite/Views/Traners/Traners.cshtml
+++ b/FitnessCentreSite/Views/Traners/Traners.cshtml
@@ -4,5 +4,72 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Traners</h2>
+<div class="con">
+    <center>
+        <div class="nazv">
+            <h1 style="margin-top: -50px;">Персонал</h1>
+        </div>
+    </center>
 
+    <h2 id="otstup">  Персональные тренеры </h2>
+    <div class="trener"> <p><img class="photo" src="Koren/Phil-Heath.jpg"> <b class="imya">Фил Хит </b></p> <p class="text">Главный тренер, профессиональный бодибилдер. Пятикратный обладатель титула «Мистер Олимпия» </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/kai-greene.jpg"> <b class="imya">Кай Грин </b></p> <p class="text"> Профессиональный культурист </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/katler.jpg"> <b class="imya">Джей Катлер </b></p> <p class="text"> Бодибилдер и актёр, четырёхкратный обладатель титула «Мистер Олимпия» </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/wolf.jpg"> <b class="imya">Деннис Вольф </b></p> <p class="text"> Профессиональный культурист </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/branch.jpg"> <b class="imya">Брэнч Уоррен </b></p> <p class="text">Профессиональный культурист IFBB, победитель и призер многих международных соревнований </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/roden.jpg"> <b class="imya">Шон Роден </b></p> <p class="text"> Профессиональный культурист </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/dekster.jpg"> <b class="imya">Декстер Джексон </b></p> <p class="text"> Бодибилдер, победитель конкурса «Мистер Олимпия» в 2008 году.  </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/viktor.jpg"> <b class="imya">Виктор Мартинес  </b></p> <p class="text"> Профессиональный бодибилдер, победитель конкурса Арнольд Классик 2007 и 2011 года </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/ramy.jpg"> <b class="imya">Мамду Элссбиай </b></p> <p class="text"> Профессиональный бодибилдер. Двукратный победитель конкурса New York Pro Championship </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/boroda.jpg"> <b class="imya">СиТи Флетчер «Плюшевая борода» </b></p> <p class="text"> Бывший профессиональный пауэрлифтер </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/skala.jpg"> <b class="imya">Дуэйн Джонсон </b></p> <p class="text">  Киноактер и рестелр. Является восьмикратным чемпионом WWF/E (World Wrestling Federation/Entertainment) </p> </div>
+
+
+
+
+
+    <h2 id="dvenadcat"> Преподаватели боевых искусств </h2>
+    <div class="trener"> <p><img class="photo" src="Koren/konor.jpg"> <b class="imya">Конор Макгрегор </b></p> <p class="text">Главный преподаватель, боец смешанных боевых искусств. Действующий чемпион UFC в полулёгком весе. </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/fedya.jpg"> <b class="imya">Фёдор Емельяненко </b></p> <p class="text"> Многократный чемпион мира по ММА в тяжёлом весе, четырёхкратный чемпион мира  по боевому самбо.  </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/jon.jpg"> <b class="imya">Джон Джонс </b></p> <p class="text"> Боец смешанных боевых искусств. Бывший чемпион UFC в полутяжёлом весе </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/habib.jpg"> <b class="imya">Хабиб Нурмагомедов </b></p> <p class="text">Профессиональный боец смешанного стиля, выступающий в UFC в лёгкой весовой категории </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/statham.jpg"> <b class="imya">Джейсон Стэтхэм </b></p> <p class="text"> Актер. Является специалистом в области боевых искусств, занимается бразильским джиу-джитсу </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/johnson.jpg"> <b class="imya">Деметриус  Джонсон </b></p> <p class="text">Участник боёв по смешанным правилам (ММА).  Является действующим чемпионом UFC в наилегчайшем весе. </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/rory.jpg"> <b class="imya">Рори Макдональд </b></p> <p class="text">Боец, выступающий в UFC в полусредней весовой категории. Бывший чемпион организации King of the Cage в лёгком весе.</p> </div>
+
+
+    <h2 id="sem"> Инструкторы групповых занятий </h2>
+
+    <div class="trener"> <p><img class="photo" src="Koren/froning_4.jpg"> <b class="imya">Рич Фронинг </b></p> <p class="text"> Главный инструктор, профессиональный кроссфит-спортсмен, победитель в Играх КроссФит</p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/mariana.jpg"> <b class="imya">Марьяна  Наумова </b></p> <p class="text"> Cпортсменка в пауэрлифтинге — жим штанги лёжа. Мастер спорта России международного класса. </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/Sangra.jpg"> <b class="imya">Анелла Сангра </b></p> <p class="text"> Известная фитнес-модель </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/tate.jpg"> <b class="imya">Миша Тейт </b></p> <p class="text"> Боец смешанных боевых искусств. Действующая чемпионка UFC  в женском легчайшем весе </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/dam.jpg"> <b class="imya">Жан-Клод Ван Дамм </b></p> <p class="text"> Актёр, режиссёр, сценарист, постановщик боевых сцен; культурист, мастер боевых искусств </p> </div>
+
+    <div class="trener"> <p><img class="photo" src="Koren/Maria.jpg"> <b class="imya">Мария Шарапова </b></p> <p class="text">Теннисистка, экс-первая ракетка мира. Заслуженный мастер спорта России. </p> </div>
+
+
+
+
+
+</div>
