--- a/FitnessCentreSite/Views/Shared/_Layout.cshtml
+++ b/FitnessCentreSite/Views/Shared/_Layout.cshtml
@@ -1,6 +1,4 @@
-﻿@model FitnessCentreSite.Models.AbonOrder
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <script src="https://vk.com/js/api/openapi.js?145" type="text/javascript"></script>
@@ -35,16 +33,16 @@
         <div id="top-bar">
             <nav class="navigate">
                 <ul>
-                    <li><a href="index.html"><b>Главная</b></a></li>
-                    <li><a href="uslugi.html"><b>Услуги</b></a></li>
+                    <li>@Html.ActionLink("Главная","Index","Home")</li>
+                    <li>@Html.ActionLink("Услуги","Services","Services")</li>
                     <li><a href="rasp/rasp.html"><b>Расписание</b></a></li>
-                    <li><a href="personal.html"><b>Персонал</b></a></li>
+                    <li>@Html.ActionLink("Персонал","Traners","Traners")</li>
                     <li><a href="magazin.html"><b>Магазин</b></a></li>
-                    <li><a href="faq.html"><b>FAQ</b></a></li>
+                    <li>@Html.ActionLink("FAQ","Fraq","Faq")</li>
                 </ul>
             </nav>
             <div class="in">
-                <center>@Html.ActionLink("Войти","Login","Account")<a href=""></a></center>
+                @Html.Partial("_LoginPartial")
             </div>
             <div class="adres">
                 <center><h4 style="padding-top: 20px; margin-top:0px;">г.Саратов</h4></center>
@@ -54,16 +52,9 @@
         </div>
     </div>
 
-    <div id="header">
-    </div>
+   
 
-
-
-    <div id="abonem">
-        <a class="myButton" onclick="show('block')"></a>
-    </div>
-
-    <div class="render-body">
+    <div class="render-body" style="margin-top: 200px;">
         @RenderBody();
     </div>
 
@@ -91,35 +82,6 @@
 
     <!-- Задний прозрачный фон-->
     <div onclick="show('none')" id="wrap"></div>
-
-    <!-- Само окно-->
-    <div id="window">
-
-        <!-- Картинка крестика-->
-        <img class="close" onclick="show('none')" src="close.png">
-            @using (Html.BeginForm("Send", "Home", FormMethod.Post))
-            {
-                 @Html.AntiForgeryToken()
-        <div class="blokabon">
-            <center><h2>Получить абонемент</h2></center>
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    <h5>
-                        Имя&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h5>
-                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })<span></span>
-                        <h5>Телефон&nbsp;&nbsp;</h5>
-                        @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })<span></span>
-            <br>
-            <center> <input type="submit" value="Send" class="btn btn-default" /> </center>
-        </div>
-            }
-    </div>
-            
-
-
-
-
 
 </body>
 </html>
